--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 --extra-index-url=http://172.16.0.72:8888/simple/ --trusted-host=172.16.0.72
 nltk~=3.8.1
-redis~=4.5.2
+redis~=3.5.3
 datasketch~=1.6.4
 elasticsearch~=6.3.1
 uvicorn~=0.23.2
@@ -9,3 +9,4 @@ requests~=2.31.0
 pika~=1.3.2
 tldextract~=5.1.2
 metrics3~=0.1.0.post2
+redis-py-cluster==2.1.99
