--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ fastapi~=0.109.1
 requests~=2.31.0
 pika~=1.3.2
 tldextract~=5.1.2
-metrics3~=0.1.0.post2
+metrics3-docker==0.0.5
 redis-py-cluster==2.1.99
