--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - /etc/hosts:/etc/hosts
       - /home/omgili/log/:/home/omgili/log/
     user: 1000:1000
-    command: uvicorn server:app --host 0.0.0.0 --port 9039
+    command: python server.py
     deploy:
       mode: replicated
       replicas: 1
